# project_template

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/examples/: pre_release.yml  release.yml  test.yml
.github/workflows/: check_pre_commit_hooks.yml  unit_tests.yml
configs/: default_runtime.py  default_runtime.yaml
configs/schedules/: schedule_1x.yaml  schedule_2x.yaml  schedule_3x.yaml
datasets/: __init__.py  base.py
docs/: conf.py  index.md
docs/configs/: config_file_structure.md  deep_update.md
docs/configs/argument_parsers/: json_file.md  yaml_with_merge.md
docs/core/: dataset.md  model.md  optimizer_config.md  trainer.md
docs/get_started/: changelog.md  contribution.md  installation.md  usage.md
docs/installation/: installation.md  installation_with_pip.md
docs/tools/: cli.md
models/: __init__.py  base.py
models/models/: base.py
requirements/: optional.txt  pip.txt  runtime.txt
src/project/: __init__.py
tools/: cli.py
tools/model/: batch_size_finder.py  calculate_MACs_and_params.py  lr_finder.py
utils/: __init__.py  utils.py
utils/callbacks/: lr_finder.py  lr_monitor.py  model_checkpoint.py  save_and_log_config_callback.py  set_float32_matmul_precision_callback.py  set_precision_and_cudnn_callback.py  set_sharing_strategy_callback.py  set_wandb_logger_callback.py  wandb_logger_log_all_code_callback.py  wandb_logger_watch_model_callback.py
utils/cli/: __init__.py  cli.py  trainer.py
utils/cli/argument_parsers/: __init__.py  deep_update.py  json_file_action.py  mmengine_config.py  yaml_with_merge.py
utils/loggers/: __init__.py  wandb.py
utils/loop/: __init__.py  kfold.py
utils/optim/: __init__.py  configure_optimizers.py  keep_and_linearly_decay_lr_scheduler.py  warmup_lr_scheduler.py
utils/progress/: rich_progress.py
